# repo-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  DESIGN.md  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  PLAN.md  README.md  TESTING.md  action.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  test_boolean_case.md  test_change.md  test_devel.md  test_draft.md  test_edit_description.md  test_edit_description_clean.md  test_edit_description_with_comments.md  test_empty_feature_branch.md  test_empty_tags.md  test_feature_branch_comments.md  test_feature_branch_false.md  test_feature_branch_lowercase.md  test_feature_branch_true.md  test_frontmatter.md  test_invalid_feature_branch.md  test_invalid_tags.md  test_invalid_yaml.md  test_mixed_variations.md  test_no_feature_branch_field.md  test_no_ready_for_review.md  test_no_release.md  test_no_yaml.md  test_preserve_feature_branch.md  (+6 more)
.claude/: pytest-pre-runner.sh  settings.json
.claude/agents/: pytest-pre-runner.md
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  keeper-auto-add-triage-label.yml  keeper-auto-label-release-backport.yml  (+11 more)
docs/: artifact-structure.md
examples/: comprehensive-usage.yml  triage-usage.yml
src/: label-automation.js  stale-detection.js  title-label-sync.js  triage-management.js
test/: README_TESTING.md  __init__.py  conftest.py  setup_org_testing.py  test_basic_functionality.py  test_config.py  test_feature_branch_labeler.py  test_label_validation.py  test_ready_for_review_labeling.py  test_release_backport_labeler.py  test_title_label_sync.py  test_triage_auto_add.py  test_yaml_variations.py
(+16 files in other folders)
