[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-repo-automations"
version = "0.1.0"
description = "GitHub Actions workflows for repository automation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.hatch.build.targets.wheel]
only-include = [
    "README.md",
    ".github/workflows/",
    "test/",
]

[project.optional-dependencies]
dev = [
    "yamllint>=1.35.0",
    "actionlint-py>=1.7.0",
    "ruff>=0.5.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.yamllint]
extends = "default"

[tool.yamllint.rules]
line-length = {max = 120}
truthy = {allowed-values = ["true", "false"]}
comments = {min-spaces-from-content = 1}

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "fork_compatibility: marks tests that validate fork compatibility and cross-repository workflows",
]